tests/ui/specialization/issue-111232.stderr
error[E0119]: conflicting implementations of trait `From<S>` for type `S`
  --> $DIR/issue-111232.rs:5:1
   |
LL | impl From<S> for S {
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T> From<T> for T;

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
